Assignment2_Zhao_Duo/tests/automated/tests/bad/BasicNumbersWithBadChars-31.calc
34.5% e 6.78% f 99.9%9
